--- a/src/index.css
+++ b/src/index.css
@@ -40,6 +40,7 @@ img {
   justify-content: center;
   align-items: center;
   min-height: 64px;
+  margin-bottom: 16px;
   padding-right: 24px;
   padding-left: 24px;
   padding-top: 12px;
@@ -124,6 +125,7 @@ img {
   list-style: none;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 16px;
 }
 
 /*
@@ -155,7 +157,7 @@ img {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   display: flex;
   justify-content: center;
@@ -165,11 +167,13 @@ img {
 }
 
 .Modal {
-  max-width: calc(100vw - 48px);
+  /* transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1); */
+
+  /* max-width: calc(100vw - 48px);
   max-height: calc(100vh - 24px);
   min-width: 400px;
   min-height: 200px;
-  background-color: #fff;
+  background-color: #fff; */
 }
 
 /*
@@ -177,11 +181,14 @@ img {
 */
 .Button {
   padding: 8px 16px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 16px;
   border-radius: 2px;
   background-color: #3f51b5;
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
   text-align: center;
-  display: inline-block;
+  display: block;
   color: #fff;
   border: 0;
   text-decoration: none;
@@ -205,14 +212,15 @@ img {
   position: absolute;
   top: 20px;
   right: 20px;
+  padding: 0;
   border-radius: 50%;
   border: none;
   width: 30px;
   height: 30px;
   background-color: transparent;
   color: #fff;
-  transition: color cubic-bezier(0.95, 0.05, 0.795, 0.035);
-  /* background-image: url("images/times-circle-regular.svg"); */
+  transition: color 250ms;
+
   cursor: pointer;
 }
 
